--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/sdk": "^4.0.99",
     "@thirdweb-dev/wallets": "^2.5.39",
+    "@uniswap/sdk-core": "^5.4.0",
+    "@uniswap/v2-sdk": "^4.4.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
